=====================================
2010-04-03T18:20:11.015755Z plt-1_303
=====================================

  2010-04-03 18:18:51 (r2860) by rcaputo
  polo-tk/lib/POE/Loop/TkActiveState.pm M; polo-tk/lib/POE/Loop/Tk.pm M;
  polo-tk/lib/POE/Loop/TkCommon.pm M; polo-tk/Makefile.PL M

    Fix PLT dependencies and bump revision for release.

  2010-03-24 06:52:46 (r2852) by apocal
  poe M; polo-gtk/Makefile.PL M; polo-tk M; polo-event M; poe-test-loops
  M; polo-gtk M

    Set svn:ignore for: META.yml CHANGES run_network_tests PoLo-Gtk
    forgot to clean run_network_tests 

  2010-03-11 05:06:03 (r2837) by apocal
  polo-event/Makefile.PL M; polo-tk/Makefile.PL M

    Add "run_network_tests" to "make clean" 

=====================================
2009-08-27T04:28:34.969753Z plt-1_302
=====================================

  2009-08-27 04:26:09 (r2652) by rcaputo
  polo-tk/lib/POE/Loop/TkActiveState.pm M; polo-tk/lib/POE/Loop/Tk.pm M;
  polo-tk/lib/POE/Loop/TkCommon.pm M; polo-tk/Makefile.PL M

    Add the info test we forgot to include.

=====================================
2009-08-26T15:39:28.802714Z plt-1_301
=====================================

  2009-08-26 15:31:41 (r2645) by rcaputo
  polo-tk/lib/POE/Loop/TkActiveState.pm M; polo-tk/lib/POE/Loop/Tk.pm M;
  polo-tk/lib/POE/Loop/TkCommon.pm M; polo-tk/Makefile.PL M

    Add POE::Test::Loops to configure_requires and build_requires.

=====================================
2009-08-26T02:33:50.734645Z plt-1_300
=====================================

  2009-08-26 02:30:31 (r2638) by rcaputo; polo-tk/Makefile.PL M

    We use the generic svn-log.perl, not the one included in POE.

  2009-08-25 17:05:17 (r2635) by rcaputo
  polo-gtk/lib/POE/Loop A; polo-gtk/lib/POE/Loop/Gtk.pm A;
  polo-tk/MANIFEST.SKIP A; polo-gtk/lib A; polo-gtk/MANIFEST A;
  polo-gtk/MANIFEST.SKIP A; poe/lib/POE/Loop/TkActiveState.pm D;
  polo-tk/Makefile.PL A; polo-tk/lib/POE A; polo-tk/lib/POE/Loop/Tk.pm A;