@@ -1,4 +1,15 @@
 =====================================
+2010-04-03T20:05:25.585279Z plt-1_304
+=====================================
+
+  2010-04-03 20:02:18 (r2868) by rcaputo
+  polo-tk/lib/POE/Loop/TkActiveState.pm M; polo-tk/lib/POE/Loop/Tk.pm M;
+  polo-tk/lib/POE/Loop/TkCommon.pm M; polo-tk/Makefile.PL M
+
+    Bump revision for a new release. No significant changes, other than
+    to build a new dist with the latest EUMM.
+
+=====================================
 2010-04-03T18:20:11.015755Z plt-1_303
 =====================================
 
